Fix contrast issue on contact button in header.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -211,6 +211,7 @@ header {
 	        width: 44%;
 	        margin: 20px 20px 0 0;
 	        clear: right;
+	        color: black;
   		}
 
 		img {
